<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/nude"
    tools:context=".ui.activity.SignUpActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="122dp"
        android:layout_height="106dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="145dp"
        android:layout_marginBottom="533dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="47dp"
        android:layout_height="44dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="336dp"
        android:layout_marginBottom="658dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_circle_left_24" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="245dp"
        android:layout_height="58dp"
        android:layout_marginStart="83dp"
        android:layout_marginTop="390dp"
        android:layout_marginEnd="83dp"
        android:layout_marginBottom="210dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/darkbrown">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_background"
            android:fontFamily="@font/roboto"
            android:hint="Password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signUpButton"
        android:layout_width="203dp"
        android:layout_height="53dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="523dp"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="155dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/inter"
        android:text="Sign Up"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/alreadyHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="149dp"
        android:layout_marginTop="584dp"
        android:layout_marginEnd="149dp"
        android:layout_marginBottom="128dp"
        android:text="Already have an account?"
        android:textColor="@color/darkbrown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="245dp"
        android:layout_height="58dp"
        android:layout_marginStart="83dp"
        android:layout_marginTop="343dp"
        android:layout_marginEnd="83dp"
        android:layout_marginBottom="280dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_background"
            android:fontFamily="@font/roboto"
            android:hint="Email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="245dp"
        android:layout_height="58dp"
        android:layout_marginStart="83dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="83dp"
        android:layout_marginBottom="330dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_background"
            android:fontFamily="@font/roboto"
            android:hint="First Name"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="245dp"
        android:layout_height="58dp"
        android:layout_marginStart="83dp"
        android:layout_marginTop="265dp"
        android:layout_marginEnd="83dp"
        android:layout_marginBottom="320dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_background"
            android:fontFamily="@font/roboto"
            android:hint="Last Name"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>