...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginBtn"
        android:layout_width="199dp"
        android:layout_height="54dp"
        android:layout_marginStart="106dp"
        android:layout_marginTop="434dp"
        android:layout_marginEnd="106dp"
        android:layout_marginBottom="243dp"
...
